--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,21 @@ body {
     font-family: Poppins, "sans-serif";
 }
 
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 9;
+  visibility: hidden;
+  text-align: center;
+  background-color: white;
+ }
+
+ @media screen and (max-width: 1080px) {
+   .overlay {
+     visibility: visible;
+   }
+ }
 
 h1 {
     margin: 0;
