--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -97,7 +97,7 @@ h1 {
 
 #picofme {
     height: 70vh;
-    background: url(asset.JPG) no-repeat bottom center;
+    background: url(asset.JPG) no-repeat center center;
     background-size: cover;
 }
 
